config and environment variables modified
