# docs/swagger.yaml
@@ -55,13 +55,18 @@ definitions:
       user_name:
         type: string
     type: object
+  domain.PingPong:
+    properties:
+      data:
+        type: string
+    type: object
 host: localhost:3030
 info:
   contact:
     email: support@swagger.io
     name: API Support
     url: http://www.swagger.io/support
-  description: This is a fintech webserver.
+  description: Fintech Bank API, a financial management application written in Go!
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -69,6 +74,19 @@ info:
   title: Fintech API
   version: "1.0"
 paths:
+  /ping:
+    get:
+      description: Ping
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.PingPong'
+      summary: Ping Healthcheck
+      tags:
+      - HealthCheck
   /register:
     post:
       consumes:
